fix text align on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,6 +607,13 @@ section .container {
   text-align: justify;
 }
 
+@media (max-width: 575px) {
+  /* Edit for phones */
+  .about-me .description {
+    text-align: center;
+  }
+}
+
 .rna-icon-box {
   height: 32px;
   width: 42px;
